Improvements in CSS: footer fixed, align and font changes.

--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
 }
-body *{    
+body *{ 
+    font-family: Comfortaa;   
     display: flex;
     flex-direction: column;
     background-color: rgb(187, 185, 185);
 }
 header{
-    height: 10vh;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-family: Comfortaa;
+    font-weight: 700;
+    height: 20vh;
     flex-direction: row;
 }
 header h1:hover{
@@ -16,10 +24,13 @@ header h1:hover{
 
 }
 main{
-    height: 80vh;
+    height: 70vh;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+a{
+    text-decoration: none;
 }
 #principal{
     background-color: rgb(239, 240, 239);
@@ -29,6 +40,7 @@ main{
    justify-content: center;
    align-items: center;
    border-radius: 10px;
+   box-shadow: 3px 2px 10px #66646496;
 
 }
 #principal #board{
@@ -62,11 +74,14 @@ main{
     color: black;
 }
 footer{
+    width: 100vw;
     height: 10vh;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     position: fixed;
     bottom: 0;
 }
-footer p, footer p a{
-    display: inline-flexbox !important;
+footer p{
+    flex-direction: row;
 }
